--- a/BankApp/web-ui/pom.xml
+++ b/BankApp/web-ui/pom.xml
@@ -1,1 +1,10 @@
+<dependencies>
+
+    <!-- REST -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+</dependencies>
 
