--- a/BankApp/helm-chart/loan-service/Chart.yaml
+++ b/BankApp/helm-chart/loan-service/Chart.yaml
@@ -1,1 +1,7 @@
+apiVersion: v2
+name: loan-service
+description: Loan microservice for banking application
+type: application
+version: 0.1.0
+appVersion: "1.0.0"
 
