--- a/BankApp/helm-chart/notification-service/Chart.yaml
+++ b/BankApp/helm-chart/notification-service/Chart.yaml
@@ -1,1 +1,7 @@
+apiVersion: v2
+name: notification-service
+description: Notification microservice for banking application
+type: application
+version: 0.1.0
+appVersion: "1.0.0"
 
