--- a/BankApp/helm-chart/transaction-service/Chart.yaml
+++ b/BankApp/helm-chart/transaction-service/Chart.yaml
@@ -1,1 +1,7 @@
+apiVersion: v2
+name: transaction-service
+description: Transaction microservice for banking application
+type: application
+version: 0.1.0
+appVersion: "1.0.0"
 
