--- a/BankApp/helm-chart/web-ui/Chart.yaml
+++ b/BankApp/helm-chart/web-ui/Chart.yaml
@@ -1,1 +1,7 @@
+apiVersion: v2
+name: web-ui
+description: Web UI gateway for banking application
+type: application
+version: 0.1.0
+appVersion: "1.0.0"
 
